--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,3 +4,5 @@ HELIUS_WEBHOOK_SECRET=replace_with_secret
 PINATA_JWT=replace_with_pinata_jwt
 SOLANA_RPC_URL=https://api.devnet.solana.com
 ADMIN_KEYPAIR_PATH=./admin-keypair.json
+
+HELIUS_API_KEY=
