--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@helia/unixfs": "^5.1.0",
+    "@pinata/sdk": "^2.1.0",
     "@repo/typescript-config": "workspace:*",
     "@solana/web3.js": "^1.98.4",
     "@types/multer": "^2.0.0",
